--- a/RulesEngine/RuleEngine.Tests/RuleEngine.OldTests.csproj
+++ b/RulesEngine/RuleEngine.Tests/RuleEngine.OldTests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CokeFridgeTests.cs" />
+    <Compile Include="PersistenceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
